fixed sub-cat text-overflow. & categoryDetails scroll.

--- a/frontend/src/components/cards/subCategoryCard/subCategoryCard.scss
+++ b/frontend/src/components/cards/subCategoryCard/subCategoryCard.scss
@@ -1,4 +1,6 @@
 .sub-cat-list {
+    list-style: none;
+    
     li {
         padding: 2px;
         box-sizing: border-box;
@@ -8,5 +10,11 @@
         align-items: center;
         border-bottom: 1px solid #a5a5a5;
         cursor: pointer;
+
+        p {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-wrap: nowrap;
+        }
     }
 }
