--- a/frontend/src/components/categoryPageComponent/categoryDetail/categoryDetail.scss
+++ b/frontend/src/components/categoryPageComponent/categoryDetail/categoryDetail.scss
@@ -44,7 +44,7 @@
         display: flex;
         flex-direction: column;
         border: 1px solid #a5a5a5;
-        border-radius: 12px;
+        border-radius: 8px;
         padding: 8px 12px;
         box-sizing: border-box;
         margin: 8px 0;
