--- a/frontend/src/components/subCategoryGrid/subCategoryGrid.scss
+++ b/frontend/src/components/subCategoryGrid/subCategoryGrid.scss
@@ -7,20 +7,5 @@
     border: 1px solid #a5a5a5;
     border-top: none;
     border-radius: 0 0 8px 8px / 0 0 8px 8px;
-
-    .sub-cat-list {
-        width: 100%;
-        list-style: none;
-        
-        // li {
-        //     padding: 2px;
-        //     box-sizing: border-box;
-        //     display: flex;
-        //     flex-direction: row;
-        //     justify-content: space-between;
-        //     align-items: center;
-        //     border-bottom: 1px solid #a5a5a5;
-        //     cursor: pointer;
-        // }
-    }
+    overflow-x: hidden;
 }
